--- a/creative-styles.css
+++ b/creative-styles.css
@@ -11,11 +11,11 @@
   font-size: 10rem;
   color: rgb(255, 255, 255);
 
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: 900;
   letter-spacing: 1rem;
-  text-shadow: 0 1px 0 #efefef, 0 2px 0 #efefef, 0 3px 0 #efefef,
-    0 4px 0 #efefef, 0 30px 5px rgba(0, 0, 0, 0.1);
+  text-shadow: 0 1px 0 #efefef, 0 2px 0 #efefef, 0 3px 0 #efefef, 0 4px 0 #efefef,
+    0 30px 5px rgba(0, 0, 0, 0.1);
   animation: float 2s ease-in-out 0.5s infinite alternate;
 }
 
@@ -53,7 +53,7 @@
   border: none;
 }
 .icons li a::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -70,7 +70,7 @@
   transform: scale(0.8);
 }
 .icons li a::after {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -79,7 +79,7 @@
   background-color: transparent;
   border: 2px dashed salmon;
   border-width: 0.4rem;
-  border-radius: 100px;
+  border-radius: 100%;
   transition: all 0.5s;
   opacity: 0;
   box-sizing: border-box;
@@ -106,8 +106,8 @@
 .css-loading a {
   font-size: 3rem;
   color: salmon;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .css-loading {
   background-color: aliceblue;
@@ -276,7 +276,7 @@ svg {
 }
 
 .flipper::before {
-  content: "Transitions";
+  content: 'Transitions';
   text-transform: uppercase;
   color: #000;
   animation: word-switch 5s ease-out infinite;
@@ -284,13 +284,13 @@ svg {
 
 @keyframes word-switch {
   0% {
-    content: "Transitions";
+    content: 'Transitions';
   }
   50% {
-    content: "Animation";
+    content: 'Animation';
   }
   100% {
-    content: "transofrm";
+    content: 'transofrm';
   }
 }
 
@@ -316,7 +316,7 @@ svg {
   color: aliceblue;
   font-size: 12rem;
   font-weight: bolder;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   letter-spacing: 4rem;
   animation: light 1.5s linear infinite;
 }
@@ -356,7 +356,7 @@ svg {
 
 .text-bg h2 {
   font-size: 25rem;
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: Georgia, 'Times New Roman', Times, serif;
   font-weight: bolder;
   text-align: center;
   text-transform: uppercase;
@@ -458,7 +458,7 @@ ul li:nth-child(5) {
   text-align: center;
 }
 .pulse::before {
-  content: "";
+  content: '';
   top: -2rem;
   left: -2rem;
   bottom: -2rem;
